fixed controls visibility issue and error  by  adding own examination

--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,7 @@
   border: 1px solid black;
   box-shadow: 0 0 4px 1px;
   width: 420px;
-  margin: 0 auto;
+  margin: 20px auto 10px auto;
   padding: 10px;
   background-color: whitesmoke;
 }
